--- a/base/src/main/resources/validation_tr.properties
+++ b/base/src/main/resources/validation_tr.properties
@@ -1,2 +1,3 @@
 validation.codeBasedItemModel.code.notEmpty = Kod alan? zorunludur.
 validation.codeBasedItemModel.code.minChar = Kod alan? en az 2 karakter olmal?d?r.
+validation.parameterModel.value.notEmpty = Değer alanı zorunludur.
