--- a/base/src/main/resources/validation_en.properties
+++ b/base/src/main/resources/validation_en.properties
@@ -1,2 +1,3 @@
 validation.codeBasedItemModel.code.notEmpty = Code field is required.
 validation.codeBasedItemModel.code.minChar = The code field must be at least 2 characters.
+validation.parameterModel.value.notEmpty = Value field is required.
