--- a/base/src/main/resources/messages_en.properties
+++ b/base/src/main/resources/messages_en.properties
@@ -1,1 +1,2 @@
 menu.root.parent.message=Root menü üst menüye sahip olamaz.
+access.denied.exception.message=You are not authorized to do this process.
